<resources>
    <string name="app_name">Implicit_Intent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_implicit_intent_functionalites">Basic Implicit Intent Functionalites</string>
    <string name="open_url">Open Url</string>
    <string name="show_map">Show Map</string>
    <string name="download">Download</string>
    <string name="send_email">Send Email</string>
    <string name="send_image">Send Image</string>
    <string name="recycler_view">Recycler View</string>
    <string name="attach_fragment">Attach Fragment</string>
</resources>
