<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/llImplici"
    tools:context="com.example.user.implicit_intent.MainActivity">
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:textSize="14sp"
       android:textStyle="bold"
       android:text="@string/basic_implicit_intent_functionalites"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btnShow"
    android:layout_gravity="center"
    android:text="@string/open_url"
    android:layout_marginTop="20dp"
    android:textSize="14sp"/>

 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginTop="20dp"
     android:text="@string/show_map"
     android:textSize="14sp"
     android:id="@+id/btnShowMap"
     />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:id="@+id/btnSendEmail"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSendImage"
        android:text="@string/send_image"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRecyclerView"
        android:text="@string/recycler_view"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attach_fragment"
        android:id="@+id/btnFragment"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
</LinearLayout>